--- a/bib/bibliography.bib
+++ b/bib/bibliography.bib
@@ -5,6 +5,13 @@
   publisher={Cambridge University Press}
 }
 
+@book{meulpolder-bartercast,
+  title={Managing supply and demand of bandwidth in peer-to-peer communities},
+  author={Meulpolder, Michel},
+  year={2011},
+  publisher={TU Delft, Delft University of Technology}
+}
+
 @mscthesis{Plak-anonymous,
   title={Anonymous Internet: Anonymizing peer-to-peer traffic using applied cryptography},
   author={Plak, RS},
@@ -96,6 +103,21 @@
   pages={8--pp},
   year={2006},
   organization={IEEE}
+}
+
+@inproceedings{pouwelse-buddycast,
+	author          = {J.A. Pouwelse and J. Yang and M. Meulpolder and D.H.J. Epema and H.J. Sips},
+	title           = {Buddycast: an Operational Peer-to-Peer Epidemic Protocol Stack},
+	booktitle       = {Proc. of the 14th Annual Conf. of the Advanced School for Computing and Imaging},
+	publisher       = {ASCI},
+	year            = {2008},
+	editor          = {G.J.M. Smit and D.H.J. Epema and M.S. Lew},
+	pages           = {200-205},
+	isbn            = {978-90-810849-3-2},
+	url             = {http://www.pds.ewi.tudelft.nl/fileadmin/pds/reports/2008/PDS-2008-005.pdf},
+	project         = {P2Pfusion},
+	topic           = {Peer-to-Peer},
+	group           = {PDS}
 }
 
 @article{Adar-Freeriding,
