--- a/thesis.tex
+++ b/thesis.tex
@@ -12,6 +12,8 @@
 \usepackage{times}
 % for url's use "\url{http://www.google.com/}"
 \usepackage{url}
+% To allow margin adjustments
+\usepackage{changepage}
 
 \begin{document}
 
