--- a/design/design.tex
+++ b/design/design.tex
@@ -10,8 +10,7 @@ This is assuming the secret key was not comprimised at the time of signing.
 This property results in that after creating a block
 both participants can no longer deny involvement in that block.
 Because they cannot repudiate their own signature
-and the act of creating signature needs a conscious decision denoting approval of the claim of help.
-The blocks become irrevocable proofs-of-help.
+The blocks become durable records aand are irrevokable and irrefutable.
 
 \section{Publicly known free-riding}
 The system will make a node's share ratio publicly accessibly,
