--- a/bib/bibliography.bib
+++ b/bib/bibliography.bib
@@ -12,10 +12,26 @@
   publisher={TU Delft, Delft University of Technology}
 }
 
+@inproceedings{meulpolder-bartercast-paper,
+  title={Bartercast: A practical approach to prevent lazy freeriding in p2p networks},
+  author={Meulpolder, Michel and Pouwelse, Johan A and Epema, Dick HJ and Sips, Henk J},
+  booktitle={Parallel \& Distributed Processing, 2009. IPDPS 2009. IEEE International Symposium on},
+  pages={1--8},
+  year={2009},
+  organization={IEEE}
+}
+
 @mscthesis{Plak-anonymous,
   title={Anonymous Internet: Anonymizing peer-to-peer traffic using applied cryptography},
   author={Plak, RS},
   year={2014},
+  school={TU Delft, Delft University of Technology}
+}
+
+@mscthesis{logiotatidis-splash,
+  title={Splash: data synchronization in unmanaged, untrusted peer-to-peer networks},
+  author={Logiotatidis, G},
+  year={2010},
   school={TU Delft, Delft University of Technology}
 }
 
@@ -59,6 +75,17 @@
   pages={1560--1563},
   year={2006},
   publisher={American Association for the Advancement of Science}
+}
+
+@article{broder-bloomfilter,
+  title={Network applications of bloom filters: A survey},
+  author={Broder, Andrei and Mitzenmacher, Michael},
+  journal={Internet mathematics},
+  volume={1},
+  number={4},
+  pages={485--509},
+  year={2004},
+  publisher={Taylor \& Francis}
 }
 
 @inproceedings{Lai-Incentives,
