--- a/relatedWork/blockChain.tex
+++ b/relatedWork/blockChain.tex
@@ -163,7 +163,7 @@ than a transaction deep down in the block chain.
 This is only an acceptable solution for clients willing to accept more risk due to having a less secure system.
 Therefor it is not a solution for the problem for every one.
 
-\subsubsection{Amount of transaction}
+\subsubsection{Amount of transactions}
 The usability of a digital currency is in part determined by the time it takes to process a transaction
 and how many transactions can be processed in a certain time scale.
 The amount of transactions that can be handled by Bitcoins are determined by three factors:
