Design: persistence section added.

--- a/bib/bibliography.bib
+++ b/bib/bibliography.bib
@@ -5,11 +5,26 @@
   publisher={Cambridge University Press}
 }
 
+@book{date-sql,
+  title={A Guide To Sql Standard},
+  author={Date, Chris J and Darwen, Hugh},
+  volume={3},
+  year={1997},
+  publisher={Addison-Wesley Reading}
+}
+
 @book{meulpolder-bartercast,
   title={Managing supply and demand of bandwidth in peer-to-peer communities},
   author={Meulpolder, Michel},
   year={2011},
   publisher={TU Delft, Delft University of Technology}
+}
+
+@book{owens-sqlite,
+  title={SQLite},
+  author={Owens, Mike and Allen, Grant},
+  year={2010},
+  publisher={Springer}
 }
 
 @inproceedings{meulpolder-bartercast-paper,
@@ -33,6 +48,17 @@
   author={Logiotatidis, G},
   year={2010},
   school={TU Delft, Delft University of Technology}
+}
+
+@article{haerder-ACID,
+  title={Principles of transaction-oriented database recovery},
+  author={Haerder, Theo and Reuter, Andreas},
+  journal={ACM Computing Surveys (CSUR)},
+  volume={15},
+  number={4},
+  pages={287--317},
+  year={1983},
+  publisher={ACM}
 }
 
 @article{zeilemaker-dispersy,
