--- a/design/design.tex
+++ b/design/design.tex
@@ -33,5 +33,5 @@ For they granted their signature to a block containing information about the amo
 A freerider cannot try to hide his freeriding afterwards.
 
 \input{design/exchanging_blocks.tex}
-
+\input{design/persistence.tex}
 
