--- a/introduction.tex
+++ b/introduction.tex
@@ -41,7 +41,7 @@ Both high availability and high download speeds result in a higher utility for t
 But currently freeriding in these networks takes places in high quantities\cite{Adar-Freeriding},
 The BitTorrent Tit-for-Tat protocol is not enough to stop abuse\cite{Pouwelse-tribler}.
 
-Tribler wants to achieve a high global seeding ratio by making it benificial to have such a ratio.
+Tribler wants to achieve a high global seeding ratio by making it beneficial to have such a ratio.
 Nodes can award each other with higher cooperation if a node has a reputation itself to be cooperative.
 This requires for a tamper-proof interaction history to base a reputation on in a network.
 Those contributing more receive more help in return,
