--- a/design/persistence.tex
+++ b/design/persistence.tex
@@ -1,5 +1,5 @@
 \section{Block Persistence}
-The blocks in the chain have to be persisted to be usuable over a prolonged time.
+The blocks in the chain have to be persisted to be usable over a prolonged time.
 There are several design goals to be achieved in the way that the blocks are persisted:
 \begin{itemize}
     \item Availlability
@@ -9,12 +9,16 @@ There are several design goals to be achieved in the way that the blocks are per
 
 The blocks have to be readily available.
 Any block can be needed at any time to verify a reputation claim
-or to be distributed to a peer on request.
-But blocks are likely to be needed sequentially.
+or to be distributed to another peer on request.
+The blocks do have the property that they are likely to be needed sequentially.
+Blocks that were never known at some point by the node are ignored for this design goal
+and are treated separately.
+%TODO Were are they discussed?
 
 Information is stored into the blocks and this information should be queryable in a easy way.
-Making the information queryable makes it accessible.
-This is necessary to be able to retrieve information easily to verify the chain of others peers.
+Making the information queryable makes the information accessible
+and allows to perform analysis of the chain.
+For example the a chain has to be analysed to verify it is correct.
 
 If parts of the chain or the whole chain are lost due to failure,
 then the node will lose its reputation.
@@ -43,20 +47,23 @@ SQLite was chosen to be used to persist the blocks.
 SQLite adequately meets the design goals needed for the persistence layer of MultiChain.
 
 The data in the SQLite database is readily available.
-Queries can be executed directly.
-Because there is not another process or server that needs to be contacted latency is reduced.
-Concurrency is handled by the SQLite library.
+Queries can be executed directly by the code.
+Latency is reduced because there is not another process or server that needs to be contacted.
+Concurrency is handled by the SQLite library,
+but Dispersy is single threaded so this is not a problem.
 
 Information stored in a SQLite database is inserted and retrieved using SQL\cite{date-sql}.
 SQL allows easy information retrieval and can be used to retrieve specific information.
-Using SQL information can easily be retrieved necessary to verify the chain.
+Using SQL information can easily be retrieved that is necessary to verify the chain.
 
 ACID-compliance guarantees that transactions are comitted reliably.
 The database is stored locally on hard disk.
-This is done in a single file and has no redudant backups.
-The operator of the node will be responsible to make redudant backups,
+This is done in a single file and has no redundant backups by default.
+The operator of the node will be responsible to make backups,
 but this is trivial for a single file.
 The file can be used by any SQLite library on any computer.
+To completely resume operations on a different computer
+additional functionality is required to export and import private keys of the MultiChain community.
 
 \subsection{Persistence layer}
 A persistence layer is added to the MultiChain community
@@ -72,17 +79,17 @@ An overview of the layering in the software architecture can be seen in Figure \
 
 The MultiChain Community calls functions in the persistence layer that have implicit knowledge about the model.
 The Persistence layer formats SQL queries and passes these to the Dispersy layer.
-The Dispersy layer performs some sanitation checks and passes these queries to the SQLite Library.
-The SQL Library and Dispersy layer returns the result of the SQL query.
-These results are transformed by the Persistence layer into objects from the Model usable by the MultiChain Community.
+The Dispersy layer performs several sanitation checks and passes these queries to the SQLite Library.
+The SQLite Library and Dispersy layer both return the result of the SQL query.
+These results are transformed by the Persistence layer into objects of the model usable by the MultiChain Community.
 
-The only information that is present are blocks.
+The only information that is saved are blocks.
 The information all fit within one table.
 A single block is saved as a single record called a row in a relation database.
 Every attribute of a block is a single column in the row.
 An overview of every attribute and the size of the attribute can be seen in Table \ref{table:block_size}.
 This makes every attribute queryable in the database.
-This was chosen to be extentible and usable when the next incremental steps are implemented.
+This was chosen to be extensible and usable when the next incremental steps are implemented.
 It is presently unknown precisly what information will be needed,
 so every information is now made available for the future.
 
