Design: crawler added.

--- a/design/design.tex
+++ b/design/design.tex
@@ -34,4 +34,4 @@ A freerider cannot try to hide his freeriding afterwards.
 
 \input{design/exchanging_blocks.tex}
 \input{design/persistence.tex}
-
+\input{design/crawler.tex}
