--- a/problemDescription/problemDescription.tex
+++ b/problemDescription/problemDescription.tex
@@ -122,4 +122,4 @@ The overall aim of this thesis is to design, implement and conduct experiments w
 implemented within Tribler.
 The interaction history will keep a history of the amount of data downloaded between nodes in the network.
 An incremental approach is taken with this thesis as the first step in creating a fully tamper-proof interaction history.
-Several more steps are needed and these steps are explained in chapter \ref{kv}.
+Several more steps are needed and these steps are explained in chapter \ref{problems}.
