--- a/problems/problems.tex
+++ b/problems/problems.tex
@@ -1,5 +1,5 @@
 \chapter{Known vulnerabilities}
-\label{kv}
+\label{problems}
 There are several known security vulnerabilities with the current design.
 As said in section \ref{pb-aim} an incremental approach was taken.
 As such, the design is part of a bigger system that as a whole is to be deployed in the real world.
