RelatedWork: added IPFS, Tor

--- a/bib/bibliography.bib
+++ b/bib/bibliography.bib
@@ -36,6 +36,22 @@
   organization={IEEE}
 }
 
+@inproceedings{androulaki-torincentive,
+  title={PAR: Payment for anonymous routing},
+  author={Androulaki, Elli and Raykova, Mariana and Srivatsan, Shreyas and Stavrou, Angelos and Bellovin, Steven M},
+  booktitle={Privacy Enhancing Technologies},
+  pages={219--236},
+  year={2008},
+  organization={Springer}
+}
+
+@inproceedings{ghosh-torincentive,
+  title={A TorPath to TorCoin: Proof-of-Bandwidth Altcoins for Compensating Relays},
+  author={Ghosh, Mainak and Richardson, Miles and Ford, Bryan and Jansen, Rob},
+  booktitle={Workshop on Hot Topics in Privacy Enhancing Technologies (HotPETs)},
+  year={2014}
+}
+
 @mscthesis{Plak-anonymous,
   title={Anonymous Internet: Anonymizing peer-to-peer traffic using applied cryptography},
   author={Plak, RS},
@@ -48,6 +64,20 @@
   author={Logiotatidis, G},
   year={2010},
   school={TU Delft, Delft University of Technology}
+}
+
+@mscthesis{dumitrescu-tribler,
+  title={Rewarding Good Behavior in Peer-to-Peer Networks},
+  author={Dumitrescu, V},
+  year={2013},
+  school={TU Delft, Delft University of Technology}
+}
+
+@article{jansen-torincentive,
+  title={From onions to shallots: Rewarding Tor relays with TEARS},
+  author={Jansen, Rob and Miller, Andrew and Syverson, Paul and Ford, Bryan},
+  journal={HotPETS.(July 2014)},
+  year={2014}
 }
 
 @article{haerder-ACID,
@@ -114,13 +144,29 @@
   publisher={Taylor \& Francis}
 }
 
+@article{benet-ipfs,
+  title={IPFS-Content Addressed, Versioned, P2P File System},
+  author={Benet, Juan},
+  journal={arXiv preprint arXiv:1407.3561},
+  year={2014}
+}
+
 @inproceedings{Lai-Incentives,
   title={Incentives for cooperation in peer-to-peer networks},
   author={Lai, Kevin and Feldman, Michal and Stoica, Ion and Chuang, John},
   booktitle={Workshop on economics of peer-to-peer systems},
   pages={1243--1248},
   year={2003}
-} 
+}
+
+@inproceedings{chen-torincentive,
+  title={XPay: Practical anonymous payments for Tor routing and other networked services},
+  author={Chen, Yao and Sion, Radu and Carbunar, Bogdan},
+  booktitle={Proceedings of the 8th ACM workshop on Privacy in the electronic society},
+  pages={41--50},
+  year={2009},
+  organization={ACM}
+}
 
 @inproceedings{Anderegg-AdHoc,
   title={Ad hoc-VCG: a truthful and cost-efficient routing protocol for mobile ad hoc networks with selfish agents},
@@ -294,3 +340,13 @@
   year={2002},
   publisher={Springer}
 }
+
+@incollection{dingledine-torincentive,
+  title={Building incentives into Tor},
+  author={Dingledine, Roger and Wallach, Dan S and others},
+  booktitle={Financial Cryptography and Data Security},
+  pages={238--256},
+  year={2010},
+  publisher={Springer}
+}
+
