--- a/relatedWork/relatedWork.tex
+++ b/relatedWork/relatedWork.tex
@@ -3,4 +3,12 @@ In this chapter we will discuss related work on tamper-proof interaction histori
 
 \input{relatedWork/blockChain.tex}
 
-\input{relatedWork/buddyCast.tex}
+\input{relatedWork/bartercast.tex}
+
+\subsection{Other related work}
+The topic of reputation system is currently a subject of research for other projects as well.
+There are two more projects worth to briefly mention.
+The Tor project is also working on a implementation of a reputation system
+in an effort to incentivize collaboration\cite{androulaki-torincentive}\cite{chen-torincentive}\cite{dingledine-torincentive}\cite{ghosh-torincentive}\cite{jansen-torincentive}.
+The InterPlanetary File System (IPFS) is a peer-to-peer distributed file system with similairities to the Tribler project.
+IPFS uses an incentivized block exchange to improve collaboration\cite{benet-ipfs}.
